fix user add/edit

--- a/protected/Layouts/assets/css/styles.css
+++ b/protected/Layouts/assets/css/styles.css
@@ -231,6 +231,12 @@ body {
     color: #666;
 }
 /*************************************************/
+/*            USERs                              */
+/*************************************************/
+.user-role .radio-inline {
+    padding-top: 0px;
+}
+/*************************************************/
 /*            FOOTER                             */
 /*************************************************/
 .container-fluid.footer {
