--- a/protected/Layouts/macros/Helpers.twig
+++ b/protected/Layouts/macros/Helpers.twig
@@ -36,9 +36,9 @@
 
 {% macro formBtnSave(ctrl) %}
     <div class="btn-group pull-right" role="group">
-        <a class="btn btn-success " type="submit">
+        <button class="btn btn-success " type="submit">
             <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>&nbsp; СОХРАНИТЬ
-        </a>
+        </button>
         <a class="btn btn-default" href="/admin/{{ ctrl }}/">отмена</a>
     </div>
 {% endmacro %}
