--- a/protected/Layouts/parts/menu.twig
+++ b/protected/Layouts/parts/menu.twig
@@ -17,6 +17,7 @@
                     {% if not app.user %}
                         <a href="/login/"><i class="fa fa-sign-in" aria-hidden="true"></i></a>
                     {% else %}
+                        <span>{{ app.user.name }}</span>
                         <a href="/admin/"><i class="fa fa-cog" aria-hidden="true"></i></a>
                         <a href="/logout/"><i class="fa fa-sign-out" aria-hidden="true"></i></a>
                     {% endif %}
