--- a/protected/Templates/Index/Default.html
+++ b/protected/Templates/Index/Default.html
@@ -1,6 +1,47 @@
 {% extends 'Index.html' %}
 
 {% block content %}
-    <h1>Hello, world!</h1>
-    <h2>It's T4 framework!</h2>
+
+    {% include 'parts/slider.twig' %}
+
+    <h2 class="last-news">Последние новости</h2>
+    <div class="row">
+        {% for item in lastNews %}
+            <div class="col-xs-12 col-sm-4">
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        <p class="main-title">{{ item.title }}</p>
+                    </div>
+                    <div class="panel-body">
+                        <img class="img-thumbnail" src="{{ asset('/Layouts/assets' ~ item.image) }}" width="100px" height="100px">
+                        <p>{{ item.text }}</p>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+
+    <hr>
+
+    <h2>Случайный трек:</h2>
+    <table class="table table-striped">
+        <thead>
+        <tr>
+            <th>Название</th><th>Автор</th><th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>{{ rndSong.title }}</td>
+            <td>{{ rndSong.author.name }}</td>
+            <td width="15%">
+                <audio controls>
+                    <source src="{{ asset('/Layouts/assets' ~ rndSong.link) }}" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+            </td>
+        </tr>
+        </tbody>
+    </table>
+    <div class="divider-40"></div>
 {% endblock %}
