--- a/protected/Templates/Albums/Default.html
+++ b/protected/Templates/Albums/Default.html
@@ -47,10 +47,10 @@
         </div>
     {% endfor %}
 
-
-
-    <div class="pager">
+    <div class="pager-center">
         {{ widget('pager', {'total': provider.total, 'size': provider.pageSize, 'active': page, 'url':'/albums/?page=%d'}) }}
     </div>
+
+
 </div>
 {% endblock %}
