--- a/protected/Templates/Index/403.html
+++ b/protected/Templates/Index/403.html
@@ -3,10 +3,10 @@
 {% block content %}
   <div class="row">
     <div class="col-md-4">
-      <img src="{{ asset('/Layouts/assets/images/404.png') }}" alt="Страница не найдена" class="img-responsive">
+      <img src="{{ asset('/Layouts/assets/images/403.png') }}" alt="Доступ запрещен, авторизуйтесь!" class="img-responsive">
     </div>
     <div class="col-md-8">
-      <h3>К сожалению, страница с таким адресом не существует, либо вы ошиблись в написании адреса.</h3>
+      <h3>Ресурс не найден либо у Вас не достаточно прав</h3>
       <h5>Перейдите на <a href="/">Главную страницу сайта</a> или попробуйте другие ссылки:</h5>
       <nav class="nav nav-pills nav-stacked">
         <li><a href="/news/">Новости</a></li>
