--- a/protected/Templates/Index/Default.html
+++ b/protected/Templates/Index/Default.html
@@ -14,17 +14,18 @@
                     </div>
                     <div class="panel-body">
                         <img class="img-thumbnail" src="{{ asset('/Layouts/assets' ~ item.image) }}" width="100px" height="100px">
-                        <p>{{ item.text }}</p>
+                        <p>{{ item.text | raw }}</p>
                     </div>
                 </div>
             </div>
         {% endfor %}
-    </div>
 
+    </div>
+    <a class="btn btn-default pull-right" href="/news/">Все новости</a>
     <hr>
 
     <h2>Случайный трек:</h2>
-    <table class="table table-striped">
+    <table class="table table-default">
         <thead>
         <tr>
             <th>Название</th><th>Автор</th><th></th>
@@ -43,5 +44,8 @@
         </tr>
         </tbody>
     </table>
+    <a class="btn btn-default pull-right" href="/songs/">Все композиции</a>
+    <div class="divider-40"></div>
+    <hr>
     <div class="divider-40"></div>
 {% endblock %}
