--- a/protected/Layouts/assets/css/styles.css
+++ b/protected/Layouts/assets/css/styles.css
@@ -9,6 +9,11 @@ body {
 .divider-40 {
     margin-top: 40px;
 }
+.pager-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .wrapper {
     min-height: 100%;
     margin-bottom: -100px;
