--- a/protected/Modules/Admin/Templates/News/Default.html
+++ b/protected/Modules/Admin/Templates/News/Default.html
@@ -38,7 +38,7 @@
 
 
     <div class="pager">
-        {{ widget('pager', {'total': provider.total, 'size': provider.pageSize, 'active': page, 'url':'/admin/posts/?page=%d'}) }}
+        {{ widget('pager', {'total': provider.total, 'size': provider.pageSize, 'active': page, 'url':'/admin/news/?page=%d'}) }}
     </div>
 
 
