--- a/protected/Templates/Songs/Default.html
+++ b/protected/Templates/Songs/Default.html
@@ -40,7 +40,7 @@
     </table>
 
     <div class="pager-center">
-        {{ widget('pager', {'total': provider.total, 'size': provider.pageSize, 'active': page, 'url':'/albums/?page=%d'}) }}
+        {{ widget('pager', {'total': provider.total, 'size': provider.pageSize, 'active': page, 'url':'/songs/?page=%d'}) }}
     </div>
 
 </div>
