--- a/protected/Layouts/macros/Helpers.twig
+++ b/protected/Layouts/macros/Helpers.twig
@@ -45,20 +45,42 @@
 
 {% macro extraBtns(ctrl) %}
     <div class="btn-group" role="group">
-        <button class="btn btn-primary btn-sm" href="/admin/{{ ctrl }}/edit/?id=new">
+        <a class="btn btn-primary btn-sm" href="/admin/{{ ctrl }}/edit/?id=new">
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp; добавить
-        </button>
+        </a>
         <a class="btn btn-default btn-sm" href="/admin/{{ ctrl }}/">
             <span class="glyphicon glyphicon-list" aria-hidden="true"></span>&nbsp; все
         </a>
     </div>
 {% endmacro %}
 
-{% macro formText(name, text = '') %}
+{% macro formText(name, text = '', label = '') %}
     <div class="form-group">
-        <label for="lead" class="col-sm-2 control-label">Текст</label>
+        <label for="lead" class="col-sm-2 control-label">{{ label }}</label>
         <div class="col-sm-10">
             <textarea id="lead" class="form-control" rows="3" name="{{ name }}">{{ text }}</textarea>
+        </div>
+    </div>
+{% endmacro %}
+
+{% macro formEditor(name, text = '') %}
+    <div class="form-group">
+        <label for="text" class="col-sm-2 control-label">Текст</label>
+        <div class="col-sm-10">
+            <t4:editor id="text" class="form-control" rows="3" name="{{ name }}">{{ text }}</t4:editor>
+        </div>
+    </div>
+{% endmacro %}
+
+{% macro formSelect(name, items, label = '') %}
+    <div class="form-group">
+        <label for="user" class="col-sm-2 control-label">{{ label }}</label>
+        <div class="col-sm-10">
+            <select id="user" name="{{ name }}" class="form-control">
+                {% for item in items %}
+                    <option value="{{ item.Pk }}">{{ item.name }}</option>
+                {% endfor %}
+            </select>
         </div>
     </div>
 {% endmacro %}
