--- a/protected/Modules/Admin/Templates/Posts/Edit.html
+++ b/protected/Modules/Admin/Templates/Posts/Edit.html
@@ -10,59 +10,22 @@
         {{ Helpers.formLegend(item, 'Пост') }}
 
         <form  class="form-horizontal" action="/admin/posts/save/" method="post" enctype="multipart/form-data">
-            <div class="form-group">
-                <label for="title" class="col-sm-2 control-label">Заголовок</label>
-                <div class="col-sm-10">
-                    <input id="title" class="form-control" type="text" name="post[title]" value="{{ item.title }}">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="image" class="col-sm-2 control-label">Картинка</label>
-                <input type="hidden" name="MAX_FILE_SIZE" value="100000">
-                <div class="col-sm-10">
-                    {% if item.image %}
-                        <img class="img-thumbnail" src="{{ asset('/Layouts/assets' ~ item.image) }}" width="50px" height="50px">
-                    {% endif %}
-                    <input type="file" name="image">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="lead" class="col-sm-2 control-label">Вводное</label>
-                <div class="col-sm-10">
-                    <textarea id="lead" class="form-control" rows="3" name="post[lead]">{{ item.lead }}</textarea>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="text" class="col-sm-2 control-label">Текст</label>
-                <div class="col-sm-10">
-                    <t4:editor id="text" class="form-control" rows="3" name="post[text]">{{ item.lead }}</t4:editor>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="user" class="col-sm-2 control-label">Автор</label>
-                <div class="col-sm-10">
-                    <select id="user" name="post[user]" class="form-control">
-                        {% for user in users %}
-                            <option value="{{ user.Pk }}">{{ user.name }}</option>
-                        {% endfor %}
-                    </select>
-                </div>
-            </div>
-            <div class="btn-group pull-right" role="group">
-                <button class="btn btn-success " type="submit">
-                    <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>&nbsp; СОХРАНИТЬ
-                </button>
-                <a class="btn btn-default" href="/admin/posts/">отмена</a>
-            </div>
-            <div class="btn-group" role="group">
-                <a class="btn btn-primary btn-sm" href="/admin/posts/edit/?id=new">
-                    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp; добавить пост
-                </a>
-                <a class="btn btn-default btn-sm" href="/admin/posts/">
-                    <span class="glyphicon glyphicon-list" aria-hidden="true"></span>&nbsp; все посты
-                </a>
-            </div>
+            {{ Helpers.formTitle('post[title]', item.title) }}
+
+            {{ Helpers.formImage('image', item.image) }}
+
+            {{ Helpers.formText('post[lead]', item.lead, 'Вводное') }}
+
+            {{ Helpers.formEditor('post[text]', item.text) }}
+
+            {{ Helpers.formSelect('post[user]', users, 'Автор') }}
+
             <input type="hidden" name="post[__id]" value="{{ item.Pk }}">
+
+            {{ Helpers.formBtnSave('posts') }}
+
+            {{ Helpers.extraBtns('posts') }}
+
         </form>
     </fieldset>
 
@@ -73,9 +36,9 @@
         <table class="table table-striped">
             <tr>
                 <th>Комментарий</th>
-                <th>Автор</th>
-                <th>Дата публикации</th>
-                <th></th>
+                <th width="15%">Автор</th>
+                <th width="15%">Дата публикации</th>
+                <th width="10%"></th>
             </tr>
             {% for item in item.comments %}
                 <tr>
@@ -97,14 +60,8 @@
             {% endfor %}
         </table>
         <hr>
-        <div class="btn-group" role="group">
-            <a class="btn btn-primary btn-sm" href="/admin/comments/edit/?id=new">
-                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp; добавить комментарий
-            </a>
-            <a class="btn btn-default btn-sm" href="/admin/comments/">
-                <span class="glyphicon glyphicon-list" aria-hidden="true"></span>&nbsp; все комментарии
-            </a>
-        </div>
+
+        {{ Helpers.extraBtns('comments') }}
 
     {% endif %}
 
